# aps-mlir

./: .clangd  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  aps-frontend  apsbinding.py  parse_with_errors.py  pixi.toml  pyproject.toml  runaps.sh  silicon.py  synthesis.sh  test_aps_binding.py  test_mlir_minimal.py  test_real_cases.py
.metals/: metals.lock.db  metals.mv.db
HardFloat/source/: divSqrtRecFN_small.v
cadl_frontend/: ast.py  grammar.lark  loop_transform.py  mlir_converter.py  parser.py  transpile_to_c.py
dev_scripts/: test_aps_dialect.py  test_mlir_valid.py
docker/: Dockerfile  Dockerfile.builder  build.sh  run.sh
docs/: Blockgen.md  Interface_Fix_Summary.md  NewArrayPartition.md  PASS_SEPARATION_GUIDE.md  SCHEDULING_ALGORITHM_REPORT.md  TOR_TO_CMT2_IMPLEMENTATION.md
docs/CADL/: README.md  aps-dialect.md  examples.md  expressions.md  flows.md  grammar.md  statements.md  type-system.md
docs/CASESTUDY/: AFFINE_CADL_GUIDE.md  ARRAY_PARTITION_WARNING_EXPLAINED.md  DECA_AFFINE_TRANSFORMATION.md  DECA_INDICES_OPTIMIZATION.md
docs/LOWER_TO_CMT2/: BBHandler_DataFlow.md  BBHandler_Refactoring_Summary.md  BlockHandler_InputDistribution_Fix.md  CMT2_Translation_Design.md  Handler_Call_Interface.md  RoCC_Memory_Translator_Summary.md
docs/MEGG/: ABSDIFF_MATCHING_FIX_ZH.md  APS_TO_STANDARD_PASS.md  BUG_ANALYSIS_SSA_SCOPE_VIOLATION.md  CADL_PATTERN_MATCHING_REFINED.md  CORRECT_CUSTOM_INSTR_ARCHITECTURE.md  CUSTOM_INSTRUCTION_MATCHING.md  E2E_COMPILATION.md  EXTRACT_COMPUTE_CORE.md  INDEX_CAST_TRANSPARENCY.md  PURE_COMPUTATION_PATTERN_PROPOSAL.md  PURE_COMPUTATION_PATTERN_PROPOSAL_CN.md  TECH_SUMMARY.md  api.md  custom_instruction_structure.drawio  deca_instruction_structure.drawio  design.md  test_case.md
docs/SCRATCHPAD_MEM/: BANK_WRAPPER_ADDRESS_CALCULATION.md  BURST_BUS_INTERFACE.md  IMPLEMENTATION_STATUS.md  README.md  ZYYTODO.md
docs/SYNTHESIS/: cadl-language.md
docs/TRANSPILER/: HIGH_LEVEL_C_TRANSPILER_GUIDE.md  NEW_TRANSPILER.md
examples/: burst_demo.cadl  burst_demo_with_count.cadl  resource.json  resource_ihp130.json  rocc_mem_smoke.cadl  sram_test.cadl  test_scalar_only.cadl  type_convert.cadl  zyy.cadl
examples/aspdac_tutorial/: tutorial.cadl
examples/deca/: C_IMPLEMENTATION_SUMMARY.md  C_REFERENCE_README.md  E2E_TESTING_GUIDE.md  MLIR_STD_UPDATE.md  Makefile  PASSES_SUMMARY.md  bitmask_example_0x0000ffff.md  deca_all_i16.cadl  deca_decompress.c  deca_decompress.cadl  deca_decompress_simple.c  deca_new.cadl  gemm.cadl  test_c_reference  test_c_reference.c  test_deca_decompress.c  test_deca_e2e.c  test_deca_e2e_opt.c  test_gemm.c  vidx_update_bug_analysis.md
examples/floatv2/: gelu.c  gelu.cadl  gelu_approx.c  gelu_approx.cadl  layernorm.c  layernorm.cadl  rmsnorm.c  rmsnorm.cadl  run.sh  sigmoid.c  sigmoid.cadl  silu.c  silu.cadl  softmax.c  softmax.cadl  softmax_gemm.c  softmax_gemm.cadl  tanh.c  tanh.cadl  tanh_approx.c  tanh_approx.cadl  test_float.c  test_float.cadl  test_float_comprehensive.c  test_float_comprehensive.cadl
examples/pcl/: README_CN.md  pcl_all.cadl  run_all.sh  test_v3ddist_vs.c  test_v3ddist_vv.c  test_vcovmat3d.c  test_vcovmat3d_vs.c  test_vfpsmax.c  test_vgemv3d.c  v3ddist_vs.c  v3ddist_vs.cadl  v3ddist_vv.c  v3ddist_vv.cadl  vcovmat3d.c  vcovmat3d.cadl  vcovmat3d_vs.cadl  vfpsmax.c  vfpsmax.cadl  vgemv3d.c  vgemv3d.cadl
examples/wont_pass/: keyword_test.cadl
flopoco-sv-lib/: .gitignore  Bender.yml  FLOPOCO_TO_SV_GUIDE.md  INSTALL.md  Makefile  README.md  generate_bender.py
flopoco-sv-lib/custom/: IEEEFPFMA_w8e23f.vhdl  Makefile  README.md  flopoco-docker.sh
flopoco-sv-lib/flopoco/: gen.py  rename.tcl
flopoco-sv-lib/rtl/: IEEE2INT.sv  IEEEComp.sv  IEEEDiv.sv  IEEELog.sv  IEEEMult.sv  IEEESqrt.sv  INT2IEEE.sv
include/: CMakeLists.txt
include/APS/: APSOps.td  APSToCMT2.h  BBHandler.h  BlockHandler.h  CMakeLists.txt  LoopHandler.h  PassDetail.h  Passes.h  Passes.td
lib/: CMakeLists.txt
lib/Schedule/: CMakeLists.txt  SDCSchedule.cpp  SDCSolver.cpp  ScheduleAlgo.cpp
outputs/: scf.json
scripts/: compile.sh  mlir-std.sh  setup-yosys-slang.sh  setup.sh
tests/: test_assignments.py  test_mlir_bindings.py  test_mlir_converter.py  test_transpile_to_c.py  test_zyy_examples.py
tools/: CMakeLists.txt
tools/aps-opt/: CMakeLists.txt  aps-opt.cpp  aps_opt.hpp  aps_opt_driver.cc  main.cc
tools/raise-scf-to-affine/: CMakeLists.txt  raise-scf-to-affine.cpp
tutorial/: a1-ex1synth.sh  a2-ex1compile.sh  a3-ex1objdump.sh  a4-ex1native.sh  a5-ex1nativesim.sh  a6-ex1sim.sh  a7-ex1yosys.sh  a8-ex2synth.sh  a9-ex2compile.sh  s1-hello-synth.sh  vgemv3d.riscv  vlsi-report-simplify.py
(+216 files in other folders)
