[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadl-frontend"
version = "0.1.0"
description = "A Python parser for CADL (Computer Architecture Description Language)"
authors = [{name = "CADL Team"}]
license = {text = "MIT"}
requires-python = "==3.10"
dependencies = [
    "lark>=1.1.0",
    "dataclasses-json>=0.6.0", "pytest>=8.4.2,<9",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cadl_frontend*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
cadl-frontend = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
parse = "python parse_with_errors.py"
parse-summary = "python parse_with_errors.py --summary"
